# book_summarizer

./: .gitignore  Makefile  README.md  push_count.json  pyproject.toml
Arduino/command/: command.ino
src/: app.py  main.py  scraper.py  sensor.py  summarize.py  works_manager.py
templates/: index.html
